modules: check for a NULL resource in client-device and client-node

See https://gitlab.freedesktop.org/pipewire/wireplumber/-/issues/113